Update VC8 GFLLibraryBuilder project
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6342 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/GFLImageServices.vcproj
+++ b/vc8_0/GFLImageServices.vcproj
@@ -367,11 +367,11 @@
 			Name="Library Files"
 			>
 			<File
-				RelativePath="..\plugins\GFLLibraryBuilder\libgfl.lib"
+				RelativePath="..\plugins\GFLImageServices\libgfl.lib"
 				>
 			</File>
 			<File
-				RelativePath="..\plugins\GFLLibraryBuilder\libgfle.lib"
+				RelativePath="..\plugins\GFLImageServices\libgfle.lib"
 				>
 			</File>
 		</Filter>
