Add missing header files.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6395 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -2537,6 +2537,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\shareaza\res_hack_def.h"
+				>
+			</File>
+			<File
 				RelativePath="..\shareaza\Resource.h"
 				>
 			</File>
@@ -2606,6 +2610,10 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\ShareazaDataSource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\shareaza\ShareazaFile.h"
 				>
 			</File>
 			<File
