Update log names for consistancy.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6432 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Installer.vcproj
+++ b/vc8_0/Installer.vcproj
@@ -22,7 +22,7 @@
 			OutputDirectory="$(SolutionDir)$(ProjectName)\"
 			IntermediateDirectory="$(OutDir)"
 			ConfigurationType="10"
-			BuildLogFile="$(IntDir)\BuildLog_$(ConfigurationName)$(PlatformName).htm"
+			BuildLogFile="$(IntDir)\BuildLog_$(ConfigurationName).htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -66,7 +66,7 @@
 			OutputDirectory="$(SolutionDir)$(ProjectName)\"
 			IntermediateDirectory="$(OutDir)"
 			ConfigurationType="10"
-			BuildLogFile="$(IntDir)\BuildLog_$(ConfigurationName)$(PlatformName).htm"
+			BuildLogFile="$(IntDir)\BuildLog_$(ConfigurationName).htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
