Update Inno Setup script to work with VC8 for Win32 & x64 builds. Update VC7 projects to match changes.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6437 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/Shareaza.vcproj
+++ b/vc7_1/Shareaza.vcproj
@@ -11,7 +11,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
 			ConfigurationType="1"
 			UseOfMFC="1"
@@ -92,7 +92,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
 			ConfigurationType="1"
 			UseOfMFC="1"
